# TensorRT_Parser_Cpp

./: CMakeLists.txt  README.md  TRTParser.cpp  TRTParser.h  main.cpp  onnxparser.cpp  onnxparser.h  parser.cpp  parser.h  trtparser.cpp  trtparser.h  utils.cpp  utils.h  utils.hpp
config/: onnx_config.yaml  onnx_config_dynamic.yaml
src/: data.cpp  data.h  logger.hpp  main.cpp  onnx_parser.cpp  onnx_parser.h  tensor.cpp  tensor.h  tensorrt_parser.cpp  tensorrt_parser.h  utils.cpp  utils.h
